--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,13 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: url('../images/main-background.jpg') center/cover no-repeat;
 }
+p{
+    margin-bottom: 0.5rem;
+}
+h1,h2,h3,h4{
+    margin-bottom: 1rem;
+    text-transform: capitalize;
+}
 ul{
     list-style-type: none;
 }
@@ -33,9 +40,27 @@ a{
     color: white;
 }
 
-.main{
-    height: 100vh;
+.section{
+    padding: 2rem;
 }
+
+.section-center{
+    width: 100%;
+    max-width: 1080px;
+    margin: 0 auto;
+
+}
+.home{
+    height: 100vh;
+    display: grid;
+    align-content: center;
+}
+
+.home-info{
+    padding: 1rem;
+    
+}
+
 .nav-links{
     display: none;
 }
@@ -122,4 +147,25 @@ a{
     .nav-selected a{
         background: transparent;
     }
+}
+
+.social-link a{
+    background-color: black;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    justify-items: center;
+    gap: 0.5rem;
+    padding: 0.5rem 1rem;
+    color: white;
+   
+}
+
+.social-link a span{
+    text-transform: uppercase;
+}
+
+.social-links{
+    display: grid;
+    gap: 1rem;
+    justify-content: start;
 }
