Adjust margin left for section

--- a/css/main.css
+++ b/css/main.css
@@ -47,9 +47,9 @@ a{
 }
 
 .section-center{
-    width: 100%;
+    width: 85%;
     max-width: 1080px;
-    margin: 0 auto;
+    margin-right: auto;
 
 }
 .home{
